# cusingler

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  setup.py
include/: cusingler.cuh  io.h  pipeline.h  timer.h  types.h
src/: CMakeLists.txt  cusingler.cu  cusingler.cuh  io.cpp  io.h  main.cpp  pipeline.cpp  pipeline.h  timer.h  types.h
test/: test_basic.py
